name:                modern-sawhorse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/difley/modern-sawhorse#readme
license:             MIT
license-file:        LICENSE
author:              Seth Difley
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable modern-sawhorse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , modern-sawhorse
                     , lens
                     , aeson
                     , aeson-lens
                     , containers
                     , bytestring
                     , text
                     , unordered-containers
                     , vector
                     , exceptions
                     , mtl
                     , hashable
  default-language:    Haskell2010

test-suite modern-sawhorse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , modern-sawhorse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/difley/modern-sawhorse
